force-app/main/default/objects/Contract/fields/Broker_Commission__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission__c</fullName>
    <label>Broker commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>