force-app/main/default/objects/Contract/fields/Buying_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Buying_Broker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buying Broker Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Buying Broker Name)</relationshipLabel>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>