force-app/main/default/objects/Contract/fields/Buying_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Buying_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buying Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>