force-app/main/default/objects/Contract/fields/CA_Commission__c.field-meta.xml
<CustomField>
    <fullName>CA_Commission__c</fullName>
    <label>CA Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>