force-app/main/default/objects/Contract/fields/Close_approval_date__c.field-meta.xml
<CustomField>
    <fullName>Close_approval_date__c</fullName>
    <label>Close approval date</label>
    <type>Date</type>
</CustomField>