force-app/main/default/objects/Contract/fields/Closed_by_Lead_Broker__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_Lead_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed by Lead Broker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>