force-app/main/default/objects/Contract/fields/Closing_Bible_Filed__c.field-meta.xml
<CustomField>
    <fullName>Closing_Bible_Filed__c</fullName>
    <label>Closing Bible Filed</label>
    <type>Date</type>
</CustomField>