force-app/main/default/objects/Contract/fields/Closing_Bible_Received__c.field-meta.xml
<CustomField>
    <fullName>Closing_Bible_Received__c</fullName>
    <label>Closing Bible Received</label>
    <type>Date</type>
</CustomField>