force-app/main/default/objects/Contract/fields/Closing_Bible_Requested__c.field-meta.xml
<CustomField>
    <fullName>Closing_Bible_Requested__c</fullName>
    <label>Closing Bible Requested</label>
    <type>Date</type>
</CustomField>