force-app/main/default/objects/Contract/fields/Completed_URL__c.field-meta.xml
<CustomField>
    <fullName>Completed_URL__c</fullName>
    <label>Completed URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>