force-app/main/default/objects/Contract/fields/Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent__c</fullName>
    <label>Contract Sent</label>
    <type>Date</type>
</CustomField>