force-app/main/default/objects/Contract/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <label>Deposit amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>