force-app/main/default/objects/Contract/fields/Deposit_currency__c.field-meta.xml
<CustomField>
    <fullName>Deposit_currency__c</fullName>
    <label>Deposit currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>