force-app/main/default/objects/Contract/fields/Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Amount__c</fullName>
    <label>Disbursement amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>