force-app/main/default/objects/Contract/fields/Disbursement_Currency__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Currency__c</fullName>
    <label>Disbursement currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>