force-app/main/default/objects/Contract/fields/Disbursement_To__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Disbursement to)</relationshipLabel>
    <relationshipName>Contracts6</relationshipName>
    <type>Lookup</type>
</CustomField>