force-app/main/default/objects/Contract/fields/Final_Sold_Currency__c.field-meta.xml
<CustomField>
    <fullName>Final_Sold_Currency__c</fullName>
    <label>Final Sold Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>