force-app/main/default/objects/Contract/fields/Final_Sold_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Sold_Price__c</fullName>
    <label>Final Sold Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>