force-app/main/default/objects/Contract/fields/Happy_to_close_date__c.field-meta.xml
<CustomField>
    <fullName>Happy_to_close_date__c</fullName>
    <label>Happy to close date</label>
    <type>Date</type>
</CustomField>