force-app/main/default/objects/Contract/fields/HOD_Close_approval__c.field-meta.xml
<CustomField>
    <fullName>HOD_Close_approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOD Close approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>