force-app/main/default/objects/Contract/fields/JCA_Broker__c.field-meta.xml
<CustomField>
    <fullName>JCA_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JCA Broker</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>