force-app/main/default/objects/Contract/fields/JCA_Comm_Split__c.field-meta.xml
<CustomField>
    <fullName>JCA_Comm_Split__c</fullName>
    <label>JCA Comm Split</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>