force-app/main/default/objects/Contract/fields/JCA_Commission__c.field-meta.xml
<CustomField>
    <fullName>JCA_Commission__c</fullName>
    <label>JCA Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>