force-app/main/default/objects/Contract/fields/JCA_Company__c.field-meta.xml
<CustomField>
    <fullName>JCA_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JCA Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (JCA Company)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>