force-app/main/default/objects/Contract/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost reason 1</fullName>
            </value>
            <value>
                <fullName>Lost reason 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>