force-app/main/default/objects/Contract/fields/Market_Position__c.field-meta.xml
<CustomField>
    <fullName>Market_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Position</label>
    <referenceTo>Market_Position__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>