force-app/main/default/objects/Contract/fields/Price_Agreed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Price_Agreed_Amount__c</fullName>
    <label>Price Agreed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>