force-app/main/default/objects/Contract/fields/Price_Agreed_Currency__c.field-meta.xml
<CustomField>
    <fullName>Price_Agreed_Currency__c</fullName>
    <label>Price Agreed Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>