force-app/main/default/objects/Contract/fields/Price_Agreed_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Agreed_Date__c</fullName>
    <label>Price Agreed Date</label>
    <type>Date</type>
</CustomField>