force-app/main/default/objects/Contract/fields/Purchase_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>