force-app/main/default/objects/Contract/fields/Sale_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sale_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Sale Opportunity)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>