force-app/main/default/objects/Contract/fields/Selling_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Selling_Broker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Broker Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Selling Broker Name)</relationshipLabel>
    <relationshipName>Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>