force-app/main/default/objects/Contract/fields/Selling_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Selling_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Selling Company Name)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>