force-app/main/default/objects/Contract/fields/Ttl_Comm_Earned_on_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ttl_Comm_Earned_on_Sale_Amount__c</fullName>
    <label>Ttl Comm Earned on Sale Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>